--- a/index.html
+++ b/index.html
@@ -87,6 +87,24 @@
 
     <!--this is the about me section-->
     <section id="about">
+      <div class="welcome-message">
+        <p class="focus">
+          <span class="evolution" style="font-style: italic"
+            >Evolution of ideas into reality</span
+          >
+          <br />
+          <span class="Journey" style="font-style: italic"
+            >Discover My Journey</span
+          >
+        </p>
+        <div class="ready">
+          <p>
+            Success comes from sweet,hard working,late night and early
+            morning.....<br />
+            <span class="Get-ready">Get ready to know me!!</span>
+          </p>
+        </div>
+      </div>
       <div class="about-content">
         <div class="about-image">
           <img
