adding design for responsive

--- a/index.html
+++ b/index.html
@@ -87,24 +87,6 @@
 
     <!--this is the about me section-->
     <section id="about">
-      <div class="welcome-message">
-        <p class="focus">
-          <span class="evolution" style="font-style: italic"
-            >Evolution of ideas into reality</span
-          >
-          <br />
-          <span class="Journey" style="font-style: italic"
-            >Discover My Journey</span
-          >
-        </p>
-        <div class="ready">
-          <p>
-            Success comes from sweet,hard working,late night and early
-            morning.....<br />
-            <span class="Get-ready">Get ready to know me!!</span>
-          </p>
-        </div>
-      </div>
       <div class="about-content">
         <div class="about-image">
           <img
@@ -422,8 +404,9 @@
         <h2 class="section-head">My Projects</h2>
       </div>
       <p>
-        Far far away, behind the word mountains, far from the countries Vokalia
-        and Consonantia
+        so far fo good.Now let's dig into projects.The following projects are
+        especially related to Ntml,css and javasctipt.Feel free to click on
+        button "Live Demo" to see how the beautiful projects it is.
       </p>
       <div class="row-pro1">
         <div class="column-pro">
