modifying my resume style

--- a/index.html
+++ b/index.html
@@ -57,20 +57,23 @@
         <h1>Hello! It's Me</h1>
         <h2>Ruth Uwamahoro</h2>
         <h3>And I am a <strong id="typing-text">UI/UX-DESIGNER</strong></h3>
-        <div class="image-responsive">
-          <img src="./images/me.jpg" alt="my image profile not displaying" />
+        <div id="me">
+          <div class="image-responsive">
+            <img src="./images/me.jpg" alt="my image profile not displaying" />
+          </div>
+          <p>
+            a versatile professional with a passion for full-stack development
+            and graphic I thrive at the intersection of creativity and
+            technology, crafting digital experiences that leave a lasting <br />
+            I'm dedicated to pushing the boundaries of what's possible in the
+            digital realm. With a keen eye for aesthetics and a love for coding,
+            I bring innovation to every project. By combining my technical
+            proficiency with a deep appreciation for design,<br />
+            I'm on a mission to transform ordinary ideas into extraordinary
+            digital realities.
+          </p>
         </div>
-        <p>
-          a versatile professional with a passion for full-stack development and
-          graphic I thrive at the intersection of creativity and technology,
-          crafting digital experiences that leave a lasting <br />
-          I'm dedicated to pushing the boundaries of what's possible in the
-          digital realm. With a keen eye for aesthetics and a love for coding, I
-          bring innovation to every project. By combining my technical
-          proficiency with a deep appreciation for design,<br />
-          I'm on a mission to transform ordinary ideas into extraordinary
-          digital realities.
-        </p>
+
         <div class="icons-container">
           <a href="#"><i class="fa-brands fa-twitter"></i></a>
           <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
