--- a/index.html
+++ b/index.html
@@ -102,8 +102,9 @@
           <h1>About Me</h1>
           <div class="address">
             <p>
-              I understand that everything is connected, that all roads meet,
-              and that all rivers flow into the same sea.
+              I believe that everything can be achieved but the level of
+              achievement depends on the efforts you have been invested.The
+              following is my personal relevant informationa and address
             </p>
 
             <div class="addresses">
