--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <div class="about-words">
           <h1>About Me</h1>
           <div class="address">
-            <p>
+            <p class="design-words">
               I believe that everything can be achieved but the level of
               achievement depends on the efforts you have been invested.The
               following is my personal relevant informationa and address
