--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           <h1>About Me</h1>
           <div class="address">
             <p class="design-words">
-              I believe that everything can be achieved but the level of
+              I believe that everything can be achieved but the level <br />of
               achievement depends on the efforts you have been invested.The
               following is my personal relevant informationa and address
             </p>
