--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
                 This project works somehow like game because it counts a number
                 according to where you start
               </p>
-              <button class="card-btn" id="counter">Live Demo</button>
+              <button class="card-btn" id="counterm">Live Demo</button>
             </div>
           </div>
         </div>
