--- a/index.html
+++ b/index.html
@@ -160,6 +160,24 @@
         </span>
       </div>
     </section>
+    <div class="new_container">
+      <div class="make-design graphic">
+        <span><i class="far fa-lightbulb"></i></span>
+        <span>Graphic Design</span>
+      </div>
+      <div class="make-design web-design">
+        <span><i class="fas fa-database"></i></span>
+        <span>Software</span>
+      </div>
+      <div class="make-design Front-end">
+        <span><i class="fas fa-code"></i></span>
+        <span>Web designer</span>
+      </div>
+      <div class="make-design back-end">
+        <span><i class="fas fa-mobile-alt"></i></span>
+        <span>Mobile App</span>
+      </div>
+    </div>
 
     <!--this is the resume section-->
     <section id="resume">
@@ -424,8 +442,7 @@
               <h3 class="card-title">WeatherWise</h3>
               <h5 class="card-sub-title">About-Project</h5>
               <p class="card-info">
-                This projects is related to the weather.It provides the basic
-                information on the current time and it provides good and
+                This projects is related to the weather.It provides good and
                 accurate info based on updates.It uses javascript and API.
               </p>
               <button class="card-btn" id="demoButton">Live Demo</button>
@@ -543,8 +560,7 @@
           <div class="contact-info">
             <h3 class="title">Let's get in touch</h3>
             <p class="text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
-              dolorum adipisci recusandae praesentium dicta!
+              If you need any more information don't hesitate to contact me
             </p>
 
             <div class="info">
