--- a/index.html
+++ b/index.html
@@ -41,12 +41,13 @@
         <li><a href="#skill">Skills</a></li>
         <li><a href="#services">Services</a></li>
         <li><a href="#projects">Projects</a></li>
-        <li><a href="#blog">My Blog</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
       <div class="menu">
         <div class="menu-button">
-          <a href="#"><i class="fa-solid fa-bars"></i></a>
+          <a href="https://www.instagram.com/uwamahoro461" target="_blank"
+            ><i class="fa-solid fa-bars"></i
+          ></a>
         </div>
       </div>
     </nav>
@@ -345,10 +346,14 @@
             <div class="icon-wrapper">
               <i class="fas fa-hammer"></i>
             </div>
-            <h3>Service Heading</h3>
+            <h3>Full-Stack development solutions</h3>
             <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam
-              consequatur necessitatibus eaque.
+              I provide comprehensive full-stack development solutions. This
+              encompasses the seamless integration of front-end and back-end
+              components, ensuring secure user authentication, and implementing
+              effective access control. I have a knack for designing and
+              optimizing application architecture, guaranteeing scalability and
+              peak performance.
             </p>
           </div>
         </div>
@@ -358,10 +363,12 @@
             <div class="icon-wrapper">
               <i class="fas fa-hammer"></i>
             </div>
-            <h3>Service Heading</h3>
+            <h3>Version Control and Collaboration Support</h3>
             <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam
-              consequatur necessitatibus eaque.
+              I provide support in version control and collaboration. Using Git,
+              I can effectively manage code versions and facilitate smooth
+              collaboration with team members. This results in a well-organized
+              code repository that promotes efficient teamwork.
             </p>
           </div>
         </div>
@@ -371,10 +378,14 @@
             <div class="icon-wrapper">
               <i class="fas fa-hammer"></i>
             </div>
-            <h3>Service Heading</h3>
+            <h3>Project Management and Communication</h3>
             <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam
-              consequatur necessitatibus eaque.
+              I excel in project management and communication. I offer services
+              in coordinating and managing development projects, from task
+              prioritization to project planning. My strong communication skills
+              allow me to interact with clients and stakeholders, gathering
+              project requirements, providing regular updates, and discussing
+              project goals and objectives.
             </p>
           </div>
         </div>
@@ -384,10 +395,13 @@
             <div class="icon-wrapper">
               <i class="fas fa-hammer"></i>
             </div>
-            <h3>Service Heading</h3>
+            <h3>Problem Solving and Security Solutions</h3>
             <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam
-              consequatur necessitatibus eaque.
+              My problem-solving and security solutions are part of the package.
+              I can swiftly identify, debug, and resolve technical issues in
+              both front-end and back-end components, ensuring software quality.
+              I also prioritize security by implementing best practices to
+              protect against web vulnerabilities
             </p>
           </div>
         </div>
@@ -397,10 +411,13 @@
             <div class="icon-wrapper">
               <i class="fas fa-hammer"></i>
             </div>
-            <h3>Service Heading</h3>
+            <h3>Mentoring and Training</h3>
             <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam
-              consequatur necessitatibus eaque.
+              I take pride in offering mentoring and training services to junior
+              developers within the team. Sharing knowledge and providing
+              guidance and support for their professional growth is not just a
+              responsibility but also a rewarding aspect of my role as a
+              full-stack developer.
             </p>
           </div>
         </div>
@@ -410,10 +427,13 @@
             <div class="icon-wrapper">
               <i class="fas fa-hammer"></i>
             </div>
-            <h3>Service Heading</h3>
+            <h3>Documentation and Knowledge Sharing</h3>
             <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam
-              consequatur necessitatibus eaque.
+              I'm committed to creating and maintaining comprehensive
+              documentation for code, APIs, and system architecture. This
+              organized documentation serves as an essential reference and
+              knowledge-sharing tool within the team, enhancing productivity and
+              collaboration.
             </p>
           </div>
         </div>
