--- a/index.html
+++ b/index.html
@@ -45,9 +45,7 @@
       </ul>
       <div class="menu">
         <div class="menu-button">
-          <a href="https://www.instagram.com/uwamahoro461" target="_blank"
-            ><i class="fa-solid fa-bars"></i
-          ></a>
+          <a href="#"><i class="fa-solid fa-bars"></i></a>
         </div>
       </div>
     </nav>
@@ -77,10 +75,18 @@
 
         <div class="icons-container">
           <a href="#"><i class="fa-brands fa-twitter"></i></a>
-          <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-          <a href="#"><i class="fa-brands fa-instagram"></i></a>
-          <a href="#"><i class="fa-brands fa-facebook-messenger"></i></a>
-          <a href="#"><i class="fa-brands fa-github"></i></a>
+          <a href="https://www.linkedin.com/in/UwamahoroRuth"
+            ><i class="fa-brands fa-linkedin-in"></i
+          ></a>
+          <a href="https://www.instagram.com/uwamahoro461" target="_blank"
+            ><i class="fa-brands fa-instagram"></i
+          ></a>
+          <a href="https://www.twitter.com"
+            ><i class="fa-brands fa-facebook-messenger"></i
+          ></a>
+          <a href="https://github.com/Ruthuwamahoro?tab=repositories"
+            ><i class="fa-brands fa-github"></i
+          ></a>
         </div>
         <button><a href="#">Hire Me...</a></button>
       </div>
