--- a/index.html
+++ b/index.html
@@ -74,17 +74,21 @@
         </div>
 
         <div class="icons-container">
-          <a href="#"><i class="fa-brands fa-twitter"></i></a>
-          <a href="https://www.linkedin.com/in/UwamahoroRuth"
+          <a href="https://www.twitter.com"
+            ><i class="fa-brands fa-twitter"></i
+          ></a>
+          <a href="https://www.linkedin.com/in/UwamahoroRuth" target="_blank"
             ><i class="fa-brands fa-linkedin-in"></i
           ></a>
           <a href="https://www.instagram.com/uwamahoro461" target="_blank"
             ><i class="fa-brands fa-instagram"></i
           ></a>
-          <a href="https://www.twitter.com"
+          <a href="https://www.facebook.com/MahoroRuth" target="_blank"
             ><i class="fa-brands fa-facebook-messenger"></i
           ></a>
-          <a href="https://github.com/Ruthuwamahoro?tab=repositories"
+          <a
+            href="https://github.com/Ruthuwamahoro?tab=repositories"
+            target="_blank"
             ><i class="fa-brands fa-github"></i
           ></a>
         </div>
@@ -540,11 +544,11 @@
               alt="projects-image"
             />
             <div class="card-body">
-              <h3 class="card-title">Project Name</h3>
+              <h3 class="card-title">Mobile-money Banking system</h3>
               <h5 class="card-sub-title">About-Project</h5>
               <p class="card-info">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore
-                voluptate
+                This projects is designed to store information related to money
+                and track balance.It uses python language
               </p>
               <button class="card-btn">Live Demo</button>
             </div>
@@ -560,10 +564,11 @@
             />
             <div class="card-body">
               <h3 class="card-title">Project Name</h3>
-              <h5 class="card-sub-title">About-Project</h5>
+              <h5 class="card-sub-title">DollarDetective</h5>
               <p class="card-info">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore
-                voluptate
+                This is python projects that is related to managing savings and
+                tracking expenses.It uses sqlite database,notify module and
+                Graphic user interface.
               </p>
               <button class="card-btn">Live Demo</button>
             </div>
