--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
               <h5 class="card-sub-title">About-Project</h5>
               <p class="card-info">
                 This projects is designed to store information related to money
-                and track balance.It uses python language
+                and track balance.It uses python- with database.
               </p>
               <button class="card-btn">Live Demo</button>
             </div>
