--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <title>Ruth Uwamahoro portfolio website</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
     <link rel="stylesheet" href="./files/style.css" />
     <link rel="stylesheet" href="./files/about.css" />
     <link rel="stylesheet" href="./files/resume.css" />
@@ -110,7 +111,7 @@
         </div>
 
         <div class="about-words">
-          <h1>About Me</h1>
+          <h1 class="about-me">About Me</h1>
           <div class="address">
             <p class="design-words">
               I believe that everything can be achieved but the level <br />of
@@ -540,7 +541,7 @@
           <div class="card">
             <img
               class="card-img"
-              src="./images/card-image1.png"
+              src="./images/banking.jpg"
               alt="projects-image"
             />
             <div class="card-body">
@@ -559,12 +560,12 @@
           <div class="card">
             <img
               class="card-img"
-              src="./images/card-image1.png"
+              src="./images/dollar.jpg"
               alt="projects-image"
             />
             <div class="card-body">
-              <h3 class="card-title">Project Name</h3>
-              <h5 class="card-sub-title">DollarDetective</h5>
+              <h3 class="card-title">DollarDetective</h3>
+              <h5 class="card-sub-title">About project</h5>
               <p class="card-info">
                 This is python projects that is related to managing savings and
                 tracking expenses.It uses sqlite database,notify module and
@@ -636,8 +637,8 @@
               <h3 class="title">Contact us</h3>
               <div class="input-container">
                 <input type="text" name="name" class="input" id="name" />
-                <label for="">Username</label>
-                <span>Username</span>
+                <label for="">Fullname</label>
+                <span>Fullname</span>
               </div>
               <div class="input-container">
                 <input type="email" name="email" class="input" id="email" />
