--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         </div>
       </div>
 
-      <div class="my-fovourite-tech">
+      <div class="my-fovourite-tech" style="width: 100%">
         <h1>My favourite Tech</h1>
         <span>
           <a href="#" class="icon-link"
@@ -291,13 +291,22 @@
       <div class="skill" data-level="7">
         <span class="skill-name">python</span>
         <div class="skill-bar">
-          <div class="skill-level" id="python-level">90%</div>
+          <div class="skill-level" id="python-level" style="--level: 90">
+            90%
+          </div>
         </div>
       </div>
       <div class="skill" data-level="6">
         <span class="skill-name">Flask</span>
         <div class="skill-bar">
-          <div class="skill-level" id="flask-level" data-level="100">90%</div>
+          <div
+            class="skill-level"
+            id="flask-level"
+            data-level="100"
+            style="--level: 90"
+          >
+            90%
+          </div>
         </div>
       </div>
       <div class="skill" data-level="5">
@@ -347,9 +356,9 @@
       <div class="row">
         <h2 class="section-heading">Services</h2>
       </div>
-      <p>
-        Far far away, behind the word mountains, far from the countries Vokalia
-        and Consonantia
+      <p style="text-align: center">
+        We deliver different services depending on what king of services do you
+        need
       </p>
       <div class="row">
         <div class="column">
@@ -613,16 +622,16 @@
             <div class="social-media">
               <p>Connect with us :</p>
               <div class="social-icons">
-                <a href="#">
+                <a href="https://www.facebook.com/MahoroRuth">
                   <i class="fab fa-facebook-f"></i>
                 </a>
-                <a href="#">
+                <a href="https://www.twitter.com">
                   <i class="fab fa-twitter"></i>
                 </a>
-                <a href="#">
+                <a href="https://www.instagram.com/uwamahoro461">
                   <i class="fab fa-instagram"></i>
                 </a>
-                <a href="#">
+                <a href="https://www.linkedin.com/">
                   <i class="fab fa-linkedin-in"></i>
                 </a>
               </div>
