--- a/index.html
+++ b/index.html
@@ -672,7 +672,7 @@
     </section>
 
     <footer id="footer">
-      <p>Copyright © Ruth Uwamahoro portfolio Project 2023</p>
+      <p>Copyright &copy; Ruth Uwamahoro portfolio Project 2023</p>
     </footer>
     <script src="./files/script.js"></script>
     <script src="./files/main.js"></script>
