--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <div class="words-section">
         <h1>Hello! It's Me</h1>
         <h2>Ruth Uwamahoro</h2>
-        <h3>And I am a <strong id="typing-text">UI/UX-DESIGNER</strong></h3>
+        <h3>And I am a <strong id="typing-text">GRAPHIC-DESIGNER</strong></h3>
         <div id="me">
           <div class="image-responsive">
             <img src="./images/me.jpg" alt="my image profile not displaying" />
