--- a/index.html
+++ b/index.html
@@ -141,7 +141,9 @@
             </div>
 
             <h2><strong id="counter">1</strong> Projects Complete</h2>
-            <button><a href="#">Downloads CV</a></button>
+            <a href="./files/My CV.pdf" download>
+              <button>Download CV</button>
+            </a>
           </div>
         </div>
       </div>
