--- a/index.html
+++ b/index.html
@@ -93,7 +93,9 @@
             ><i class="fa-brands fa-github"></i
           ></a>
         </div>
-        <button><a href="#">Hire Me...</a></button>
+        <a href="./files/My CV.pdf" download>
+          <button>Hire Me...</button>
+        </a>
       </div>
       <div class="image-section">
         <img src="./images/me.jpg" alt="my image profile not displaying" />
