--- a/index.html
+++ b/index.html
@@ -354,6 +354,7 @@
         </div>
       </div>
     </section>
+    <!-- End of skills section -->
 
     <!--this is the services section-->
     <section id="services">
@@ -463,6 +464,7 @@
         </div>
       </div>
     </section>
+    <!-- End of services section -->
 
     <!--this is the projects section-->
     <section id="projects">
@@ -596,6 +598,7 @@
       </div>
       <div id="next-page"></div>
     </section>
+    <!-- End of projects section -->
     <!--this is the contact section-->
     <section id="contact">
       <div class="container">
