--- a/index.html
+++ b/index.html
@@ -649,7 +649,12 @@
             <span class="circle one"></span>
             <span class="circle two"></span>
 
-            <form action="index.html" autocomplete="off" id="contactForm">
+            <form
+              action="contact.php"
+              autocomplete="off"
+              id="contactForm"
+              method="post"
+            >
               <h3 class="title">Contact us</h3>
               <div class="input-container">
                 <input type="text" name="name" class="input" id="name" />
